--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,23 +1,17 @@
-* {
+body {
     padding: 0px;
     margin: 0px;
+    background-color: floralwhite;
 }
 
 #header-bg {
     width: 100%;
     height: 400px;
     background-image: url("../img/landscape.jpg");
-    background-size: cover;
+    background-size: center;
     background-attachment: fixed;
 }
 
-#gradient {
-    width: 100%;
-    height: 300px;
-    position: absolute;
-    top: 100px;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(255,255,255,1))
-}
 
 #title {
     font-family: 'Krona One', sans-serif;
@@ -26,11 +20,8 @@
     font-size: 3rem;
 }
 
-#body {
-    min-height: 500px;
-    
-    margin: 50px auto;
-    padding-bottom: 100px;
+#container {
+    min-height: 550px;
 }
 
 .info-button {
@@ -46,7 +37,7 @@
 }
 
 .info-button.active {
-        background-color: #97A055;
+    background-color: #97A055;
 }
 
 #info-buttons {
@@ -59,21 +50,49 @@
 
 .content {
     width: 80%;
-    margin: auto;
+    margin: 50px auto 0;
     text-align: center;
     font-family: "Montserrat", Arial;
+    vertical-align: bottom;
+}
+
+#about-content {
+    margin: 80px auto 300px;
 }
 
 .resident-about {
-    margin: 50px 0px;
+    display: inline-block;
+    width: 30%;
+    margin: 0px 10px;
+    vertical-align: top;
+}
+
+.resident-img {
+    max-width: 100%;
+    margin-bottom: 57px;
+}
+
+#shadow-img {
+    margin-top: 5px;
+    border-radius: 0 0 20px 20px;
+}
+
+#flame-img {
+    margin-top: 140px;
+    border-radius: 0 0 20px 40%;
+}
+
+#molly-img {
+    margin-top: 55px;
+    border-radius: 0 0 40% 20px;
 }
 
 em {
     text-decoration: underline;
 }
 
-#change-charity {
-    height: 180px;
+#donate-header {
+    padding: 0 20%;
 }
 
 #donate-content {
@@ -84,9 +103,8 @@ em {
     display: inline-block;
     max-height: 400px;
     width: 45%;
-    margin: 50px 0px;
     vertical-align: top;
-    padding: 50px 0px;
+    padding: 20px 0px 0px;
     font-size: .9em;
 }
 
@@ -95,8 +113,7 @@ em {
     height: 350px;
     width: 1px;
     border: 1px solid black;
-    margin: 100px 0px;
-    
+    margin: 50px 0px;   
 }
 
 #paypal {
@@ -134,10 +151,7 @@ em {
     color: black;
     text-align: center;
     padding: .5rem;
-}
-
-#smile-instructions {
-    padding-top: 25px;
+    background-color: #97A055;
 }
 
 #smile ul {
@@ -160,4 +174,11 @@ em {
 
 #smile li h4 {
     display: inline-block;
+}
+
+@media only screen and (max-width < 800px) {
+    /*
+        need to add responsive designs for mobile
+        instead of horizontal panels, stack vertically
+    */
 }
